# cornucopia

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  LICENSE.txt  README.md  SECURITY.md  cli.md  grammar.pest  release-plz.toml
bench/: Cargo.toml  build.rs  codegen.rs
bench/benches/: bench.rs  diesel_benches.rs  postgres_benches.rs  tokio_postgres_benches.rs
bench/benches/cornucopia_benches/: generated.rs  generated_async.rs  generated_sync.rs  mod.rs
bench/benches/cornucopia_benches/queries/: bench.sql
bench/usage/: diesel_benches.rs  main.rs  postgres_benches.rs  tokio_postgres_benches.rs
bench/usage/cornucopia_benches/: generated.rs  generated_async.rs  generated_sync.rs  mod.rs
benches/: Cargo.toml  README.md  codegen.rs
benches/execution/: cornucopia_benches.rs  diesel_benches.rs  main.rs  postgres_benches.rs  sqlx_benches.rs  tokio_postgres_benches.rs
benches/execution/cornucopia_benches/: generated.rs
benches/execution/cornucopia_benches/queries/: bench.sql
benches/queries/: bench.sql
benches/temp/: Cargo.toml
benches/temp/src/: client.rs  lib.rs
benches/temp/src/client/: array_iterator.rs  async_.rs  domain.rs  sync.rs  type_traits.rs  utils.rs
benches/usage/: postgres_benches.rs
benches/usage/cornucopia_benches/: generated_sync.rs
clients/async/: Cargo.toml  README.md
clients/async/src/: deadpool.rs  generic_client.rs  lib.rs  private.rs
clients/core/: Cargo.toml
clients/core/src/: array_iterator.rs  domain.rs  lib.rs  type_traits.rs
clients/sync/: Cargo.toml  README.md
clients/sync/src/: lib.rs  private.rs
code/: Cargo.toml
codegen_test/: Cargo.toml  schema.sql
codegen_test/migrations/: 1648515058_copy.sql  1648515058_domain.sql  1648515058_named.sql  1648515058_nullity.sql  1648515058_params.sql  1648515058_stress.sql  1648515058_syntax.sql
codegen_test/queries/: copy.sql  domain.sql  named.sql  nullity.sql  params.sql  stress.sql  syntax.sql
codegen_test/src/: cornucopia.rs  cornucopia_async.rs  cornucopia_sync.rs  main.rs
cornucopia/: Cargo.toml  test.rs
cornucopia/src/: cli.rs  codegen.rs  conn.rs  container.rs  error.rs  lib.rs  load_schema.rs  parser.rs  prepare_queries.rs  read_migrations.rs  read_queries.rs  read_schema.rs  run_migrations.rs  type_registrar.rs  utils.rs  validation.rs
cornucopia_client/: Cargo.toml  README.md
cornucopia_client/src/: array_iterator.rs  async_.rs  deadpool.rs  lib.rs  private.rs  sync.rs
crates/client_async/: Cargo.toml  README.md
crates/client_async/src/: deadpool.rs  generic_client.rs  lib.rs  private.rs
crates/client_core/: Cargo.toml  README.md
crates/client_core/src/: array_iterator.rs  domain.rs  lib.rs  type_traits.rs  utils.rs
crates/client_sync/: Cargo.toml
crates/client_sync/src/: generic_client.rs  private.rs
crates/codegen_template/: Cargo.toml  README.md
crates/codegen_template/src/: lib.rs
crates/cornucopia/: Cargo.toml
crates/cornucopia/src/: cli.rs  codegen.rs  conn.rs  container.rs  error.rs  lib.rs  load_schema.rs  parser.rs  prepare_queries.rs  read_queries.rs  type_registrar.rs  utils.rs  validation.rs
crates/cornucopia/src/clients/: array_iterator.rs  mod.rs
crates/cornucopia/src/codegen/: cargo.rs  client.rs  queries.rs  types.rs  vfs.rs
examples/auto_build/: Cargo.toml  README.md  _build.rs  build.rs  schema.sql
examples/auto_build/auto_build_codegen/: Cargo.toml
examples/auto_build/migrations/: 1650591033_first.sql
examples/auto_build/queries/: module_1.sql
examples/auto_build/src/: cornucopia.rs  main.rs
examples/basic/: Cargo.toml  README.md
examples/basic/migrations/: 1648515058_first.sql  1648515066_second.sql
examples/basic/queries/: module_1.sql  module_2.sql
examples/basic/src/: cornucopia.rs  main.rs
examples/basic_async/: Cargo.toml  README.md  schema.sql
examples/basic_async/basic_async_codegen/: Cargo.toml
examples/basic_async/queries/: module_1.sql  module_2.sql
examples/basic_async/src/: cornucopia.rs  main.rs
examples/basic_async_wasm/: Cargo.toml  README.md
examples/basic_async_wasm/.cargo/: config.toml
examples/basic_async_wasm/basic_async_wasm_codegen/: Cargo.toml
examples/basic_async_wasm/queries/: module_1.sql  module_2.sql
examples/basic_async_wasm/src/: lib.rs  main.rs
examples/basic_sync/: Cargo.toml  README.md  schema.sql
examples/basic_sync/basic_sync_codegen/: Cargo.toml
examples/basic_sync/migrations/: 1648515066_second.sql
examples/basic_sync/queries/: module_2.sql
examples/basic_sync/src/: cornucopia.rs  main.rs
examples/custom_types/: Cargo.toml  README.md  cornucopia.toml  kafstel.txt  schema.sql
examples/custom_types/queries/: module_1.sql
examples/custom_types/src/: main.rs
integration/: Cargo.toml  README.md
integration/fixtures/: migration.toml  parser.toml  prepare.toml  validation.toml
integration/fixtures/codegen/: benchmarks.toml  codegen_test.toml  examples.toml
integration/fixtures/errors/: codegen.toml  migration.toml  prepare.toml  validation.toml
integration/quote/: Cargo.toml
integration/src/: main.rs
test_codegen/: Cargo.toml  schema.sql
test_codegen/codegen/: Cargo.toml
test_codegen/codegen/src/: array_iterator.rs  client.rs  lib.rs  queries.rs  type_traits.rs  types.rs
test_codegen/queries/: named.sql  params.sql  stress.sql
test_codegen/src/: cornucopia.rs  cornucopia_sync.rs  main.rs
test_integration/: Cargo.toml  README.md
test_integration/fixtures/codegen/: benchmarks.toml  examples.toml  test_codegen.toml
test_integration/fixtures/errors/: codegen.toml  prepare.toml  schema.toml  validation.toml
test_integration/src/: codegen.rs  errors.rs  fixtures.rs  main.rs  utils.rs
tests/codegen/: Cargo.toml  README.md  cornucopia.toml  schema.sql
tests/codegen/codegen/: Cargo.toml
tests/codegen/queries/: attributes.sql  domain.sql  named.sql  nullity.sql  stress.sql  syntax.sql
tests/codegen/src/: main.rs
tests/integration/: Cargo.toml  README.md
tests/integration/src/: codegen.rs  errors.rs  fixtures.rs  main.rs  utils.rs
(+158 files in other folders)
