[package]
name = "cornucopia"
version = "0.7.4"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Generate type checked Rust from your SQL"
homepage = "https://github.com/cornucopia-rs/cornucopia"
repository = "https://github.com/cornucopia-rs/cornucopia"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

[workspace]
members = ["examples/*", "cornucopia_client"]

[dependencies]
cornucopia_client = { path = "cornucopia_client" }
fallible-iterator = "0.2.0"
postgres = { version = "0.19.3", features = [
    "with-serde_json-1",
    "with-time-0_3",
    "with-uuid-1",
    "with-eui48-1",
] }
postgres-types = { version = "0.2.3", features = ["derive"] }
serde = "1.0.137"
serde_json = { version = "1.0.81", features = ["raw_value"] }
time = { version = "0.3.9", features = ["parsing"] }
uuid = "1.0.0"
eui48 = "1.1.0"

thiserror = "1.0.31"
clap = { version = "3.1.18", features = ["derive"] }
pest = "2.1.3"
pest_derive = "2.1.0"
heck = "0.4.0"
indexmap = "1.8.1"

prettyplease = "0.1.10"
syn = { version = "1.0.95", features = ["parsing"] }
