[package]
name = "cornucopia"
version = "0.7.4"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Generate type checked Rust from your SQL"
homepage = "https://github.com/cornucopia-rs/cornucopia"
repository = "https://github.com/cornucopia-rs/cornucopia"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

[workspace]
members = [
    "examples/*",
    "cornucopia_client",
    "integration",
    "codegen_test",
    "bench",
]

[dependencies]
postgres = { version = "0.19.3", features = [
    "with-serde_json-1",
    "with-time-0_3",
    "with-uuid-1",
    "with-eui48-1",
] }
postgres-types = { version = "0.2.3", features = ["derive"] }
time = { version = "0.3.9", features = ["parsing"] }

thiserror = "1.0.31"
miette = { version = "4.7.1", features = ["fancy"] }
clap = { version = "3.1.18", features = ["derive"] }
heck = "0.4.0"
indexmap = "1.8.2"

chumsky = "0.8.0"
