[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"
criterion = "0.3.6"
postgres = "0.19.3"
tokio-postgres = "0.7.6"
postgres-types = "0.2.3"
diesel = { version = "2.0.0-rc.0", features = ["postgres"] }

cornucopia = { path = "../cornucopia" }
cornucopia_client_sync = { path = "../clients/cornucopia_client_sync" }
cornucopia_client_async = { path = "../clients/cornucopia_client_async" }

[[bench]]
name = "usage"
harness = false
path = "usage/main.rs"

[[bench]]
name = "codegen"
harness = false
path = "codegen.rs"
