[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.25"
criterion = { version = "0.4.0", features = ["html_reports"] }
postgres = "0.19.4"
tokio-postgres = "0.7.7"
postgres-types = "0.2.4"
diesel = { version = "2.0.2", features = ["postgres"] }

cornucopia = { path = "../cornucopia" }
cornucopia_sync = { path = "../clients/sync" }
cornucopia_async = { path = "../clients/async" }

[[bench]]
name = "usage"
harness = false
path = "usage/main.rs"

[[bench]]
name = "codegen"
harness = false
path = "codegen.rs"
