[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path dependencies
cornucopia = { path = "../crates/cornucopia" }

# benchmarking
criterion = { version = "0.5.1", features = ["html_reports"] }

# async
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"

# rust-postgres interaction
postgres = "0.19.5"
tokio-postgres = "0.7.8"
postgres-types = "0.2.5"

# diesel
diesel = { version = "2.0.4", features = ["postgres"] }

# Temporary files
tempfile = "3.5.0"

generated = { path = "generated" }

[[bench]]
name = "execution"
harness = false
path = "execution/main.rs"

[[bench]]
name = "codegen"
harness = false
path = "codegen.rs"
