[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path dependencies
cornucopia = { path = "../crates/cornucopia" }
cornucopia_sync = { path = "../crates/client_sync" }
cornucopia_async = { path = "../crates/client_async" }

# benchmarking
criterion = { version = "0.5.1", features = ["html_reports"] }

# async
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"

# rust-postgres interaction
postgres = "0.19.4"
tokio-postgres = "0.7.7"
postgres-types = "0.2.4"

# diesel
diesel = { version = "2.0.2", features = ["postgres"] }

[[bench]]
name = "execution"
harness = false
path = "execution/main.rs"

[[bench]]
name = "codegen"
harness = false
path = "codegen.rs"
