[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path dependencies
cornucopia = { path = "../crates/cornucopia" }
cornucopia_sync = { path = "../crates/client_sync" }
cornucopia_async = { path = "../crates/client_async" }

# benchmarking
criterion = { version = "0.5.1", features = ["html_reports"] }

# async
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"

# rust-postgres interaction
postgres = "0.19.7"
tokio-postgres = "0.7.10"
postgres-types = "0.2.6"

# diesel
diesel = { version = "2.2.1", features = ["postgres"] }

[[bench]]
name = "execution"
harness = false
path = "execution/main.rs"

[[bench]]
name = "codegen"
harness = false
path = "codegen.rs"
