[package]
name = "cornucopia_client"
version = "0.2.2"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Generic client trait for Cornucopia users"
homepage = "https://github.com/cornucopia-rs/cornucopia"
repository = "https://github.com/cornucopia-rs/cornucopia"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
deadpool-postgres = "0.10.2"
tokio-postgres = "0.7.6"
postgres = "0.19.3"
async-trait = "0.1.53"
postgres-protocol = "0.6.4"
postgres-types = { version = "0.2.3", features = [
    "derive",
    "with-serde_json-1",
] }
serde = "1.0.137"
serde_json = "1.0.81"
