[package]
name = "cornucopia_client"
version = "0.2.2"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Generic client trait for Cornucopia users"
homepage = "https://github.com/cornucopia-rs/cornucopia"
repository = "https://github.com/cornucopia-rs/cornucopia"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

[features]
default = ["deadpool"]
async = ["dep:tokio-postgres", "dep:async-trait"]
deadpool = ["async", "dep:deadpool-postgres"]
sync = ["dep:postgres"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.7.6", optional = true }
postgres = { version = "0.19.3", optional = true }
async-trait = { version = "0.1.56", optional = true }
deadpool-postgres = { version = "0.10.2", optional = true }
fallible-iterator = "0.2"
postgres-protocol = "0.6.4"
postgres-types = { version = "0.2.3" }
