[package]
name = "integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.3.0"
toml = "0.5.9"
owo-colors = "3.5.0"
serde = { version = "1.0.144", features = ["derive"], package = "serde" }
clap = { version = "3.2.21", features = ["derive"] }
cornucopia = { path = "../cornucopia" }
postgres = "0.19.4"
