[package]
name = "test_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cornucopia
codegen = { path = "codegen" }
# async
futures = "0.3.25"
# rust-postgres interaction
postgres = "0.19.5"
tokio-postgres = "0.7.8"
# serde
serde = { version = "1.0.163", features = ["derive"] }
# extra types
serde_json = { version = "1.0.96", features = ["raw_value"] }
time = { version = "0.3.21", features = ["parsing", "serde"] }
uuid = { version = "1.3.2", features = ["serde"] }
eui48 = { version = "1.1.0", features = ["serde"] }
rust_decimal = { version = "1.29.1", features = ["db-postgres"] }
