[package]
name = "test_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path dependencies
cornucopia_sync = { path = "../crates/client_sync", features = [
    "with-serde_json-1",
] }
cornucopia_async = { path = "../crates/client_async", features = [
    "with-serde_json-1",
] }

# async
futures = "0.3.30"

# rust-postgres interaction
postgres = { version = "0.19.7", features = [
    "with-serde_json-1",
    "with-time-0_3",
    "with-uuid-1",
    "with-eui48-1",
] }
tokio-postgres = { version = "0.7.10", features = [
    "with-serde_json-1",
    "with-time-0_3",
    "with-uuid-1",
    "with-eui48-1",
] }
postgres-types = { version = "0.2.6", features = ["derive"] }

# serde
serde = { version = "1.0.203", features = ["derive"] }

# extra types
serde_json = { version = "1.0.117", features = ["raw_value"] }
time = { version = "0.3.36", features = ["parsing", "serde"] }
uuid = { version = "1.8.0", features = ["serde"] }
eui48 = { version = "1.1.0", features = ["serde"] }
rust_decimal = { version = "1.35.0", features = ["db-postgres"] }
