[package]
name = "test_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path dependencies
cornucopia = { path = "../crates/cornucopia" }

# Create temporary projects for error tests.
tempfile = "3.3.0"

# Colored output
owo-colors = "3.5.0"

# CLI handling
clap = { version = "4.0.29", features = ["derive"] }

# Postgres interaction
postgres = { version = "0.19.4" }

# serde
## Test fixtures ser/de
serde = { version = "1.0.148", features = ["derive"] }
## Read/write fixture files
toml = "0.8.2"
