[package]
name = "test_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path dependencies
cornucopia = { path = "../crates/cornucopia" }

# Create temporary projects for error tests.
tempfile = "3.5.0"

# Compare directories
dir-diff = "0.3.2"

# Colored output
owo-colors = "4.0.0"

# CLI handling
clap = { version = "4.3.5", features = ["derive"] }

# Postgres interaction
postgres = "0.19.5"

# serde
## Test fixtures ser/de
serde = { version = "1.0.163", features = ["derive"] }
## Read/write fixture files
toml = "0.8.2"
