[package]
name = "cornucopia_async"
version = "0.2.2"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Generic client trait for Cornucopia users"
homepage = "https://github.com/cornucopia-rs/cornucopia"
repository = "https://github.com/cornucopia-rs/cornucopia"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

[features]
default = ["deadpool"]
deadpool = ["dep:deadpool-postgres"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.7.6" }
async-trait = { version = "0.1.56" }
deadpool-postgres = { version = "0.10.2", optional = true }

client_core = { path = "../core" }
