[package]
name = "cornucopia_async"
version = "0.3.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Asynchronous client library for Cornucopia users."
homepage = "https://cornucopia-rs.netlify.app/"
repository = "https://github.com/cornucopia-rs/cornucopia"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

[features]
default = ["deadpool"]
deadpool = ["dep:deadpool-postgres"]
with-serde_json-1 = ["cornucopia_client_core/with-serde_json-1"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.7"
async-trait = "0.1.58"
deadpool-postgres = { version = "0.10.3", optional = true }

cornucopia_client_core = { path = "../core", version = "0.3.1"  }
