[package]
name = "cornucopia_client_core"
version = "0.3.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Private abstractions for Cornucopia clients."
homepage = "https://cornucopia-rs.netlify.app/"
repository = "https://github.com/cornucopia-rs/cornucopia"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-protocol = "0.6.4"
postgres-types = { version = "0.2.3" }
fallible-iterator = "0.2"
