[package]
name = "cornucopia_sync"
version = "0.3.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Synchronous client library for Cornucopia users."
homepage = "https://github.com/cornucopia-rs/cornucopia"
repository = "https://github.com/cornucopia-rs/cornucopia"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.3" }
client_core = { path = "../core" }
