[package]
name = "cornucopia_sync"
version = "0.3.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Synchronous client library for Cornucopia users."
homepage = "https://cornucopia-rs.netlify.app/"
repository = "https://github.com/cornucopia-rs/cornucopia"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.4"

cornucopia_client_core = { path = "../core", version = "0.3.1" }

[features]
with-serde_json-1 = ["cornucopia_client_core/with-serde_json-1"]
