[package]
name = "cornucopia_async"
version = "0.6.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Asynchronous client library for Cornucopia users."
homepage = "https://cornucopia-rs.netlify.app/"
repository = "https://github.com/cornucopia-rs/cornucopia"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

[features]
default = ["deadpool"]
deadpool = ["dep:deadpool-postgres", "tokio-postgres/default"]
with-serde_json-1 = ["cornucopia_client_core/with-serde_json-1"]
wasm = ["tokio-postgres/js"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path dependencies
cornucopia_client_core = { path = "../client_core", version = "0.4.0" }

# async
async-trait = "0.1.63"

# rust-postgres interaction
tokio-postgres = { version = "0.7.7", default_features = false }

# connection pooling
deadpool-postgres = { version = "0.12.1", optional = true }
