[package]
name = "cornucopia_sync"
version = "0.4.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Synchronous client library for Cornucopia users."
homepage = "https://cornucopia-rs.netlify.app/"
repository = "https://github.com/cornucopia-rs/cornucopia"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with-serde_json-1 = ["cornucopia_client_core/with-serde_json-1"]

[dependencies]
# Path dependencies
cornucopia_client_core = { path = "../client_core", version = "0.4.0" }

# postgres interaction
postgres = "0.19.4"
