[package]
name = "auto-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cornucopia async client
## If you're trying this example as a standalone crate, 
## replace the path with the latest current version
cornucopia_async = { path = "../../crates/client_async" }

# Async
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"

# Postgres interaction
tokio-postgres = "0.7.10"
postgres-types = "0.2.6"
## Connection pooling
deadpool-postgres = "0.14.0"

[build-dependencies]
# Cornucopia library to automatically
## If you're trying this example as a standalone crate, 
## replace the path with the latest current version
cornucopia = { path = "../../crates/cornucopia" }
