[package]
name = "auto-build"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Cornucopia (codegen)
codegen = { path = "auto_build_codegen", package = "auto_build_codegen" }

# Async
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"

[build-dependencies]
# Cornucopia (cli/api)
cornucopia = { path = "../..", package = "cornucopia" }
