[package]
edition = "2021"
name = "cornucopia-example-basic"
version = "0.1.0"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
deadpool-postgres = { version = "0.10.2" }
postgres-types = { version = "0.2.2", features = ["derive"] }
tokio-postgres = { version = "0.7.5" }
cornucopia_client = "0.1.0"
