[package]
edition = "2021"
name = "basic-async"
version = "0.1.0"

[dependencies]
#cornucopia = { path = "cornucopia" }

# Async
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"

codegen = { path = "basic_async_codegen", package = "basic_async_codegen" }
# Postgres interaction
tokio-postgres = "0.7.7"
## Connection pooling
deadpool-postgres = "0.10.4"
