[package]
edition = "2021"
name = "basic-async"
version = "0.1.0"

[dependencies]
# Cornucopia
codegen = { path = "basic_async_codegen", package = "basic_async_codegen" }
# Async
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
# Postgres interaction
tokio-postgres = "0.7.7"
## Connection pooling
deadpool-postgres = "0.12.1"
