[package]
edition = "2021"
name = "basic-async"
version = "0.1.0"

[dependencies]
# Cornucopia async client
## If you're trying this example as a standalone crate, 
## replace the path with the latest current version
cornucopia_async = { path = "../../crates/client_async" }

# Async
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"

# Postgres interaction
tokio-postgres = "0.7.10"
postgres-types = { version = "0.2.6", features = ["derive"] }
## Connection pooling
deadpool-postgres = "0.14.0"
