[package]
edition = "2021"
name = "basic-async-wasm"
version = "0.1.0"
publish = false

[dependencies]
# Cornucopia with wasm feature
cornucopia = { path = "basic_async_wasm_codegen", package = "basic_async_wasm_codegen", default-features = false, features = [
    "wasm-async",
] }
tokio = { version = "1.45", default-features = false, features = [
    "macros",
    "rt",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
worker = "0.5"

[lib]
crate-type = ["cdylib", "rlib"]
