[package]
name = "basic_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-types = { version = "0.2.3", features = ["derive"] }
postgres = "0.19.3"
cornucopia_sync = { path = "../../clients/sync" }
