[package]
name = "basic_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Postgres interaction
postgres = "0.19.4"
postgres-types = { version = "0.2.4", features = ["derive"] }

# cornucopia async client
## If you're trying this example as a standalone crate, 
## replace the path with the latest current version
cornucopia_sync = { path = "../../crates/client_sync" }
