[package]
edition = "2021"
name = "custom-types"
version = "0.1.0"
publish = false

[dependencies]
# Cornucopia
cornucopia = { path = "db/custom_types_codegen", package = "custom_types_codegen" }
# Custom types
db_types = { path = "db/db_types" }
# Async
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
